--- a/Template.Web/Template.Web.csproj
+++ b/Template.Web/Template.Web.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Template.Data\Template.Data.csproj" />
+    <ProjectReference Include="..\Template.Core\Template.Core.csproj" />
   </ItemGroup>
 
 </Project>
