--- a/Template.Web/appsettings.json
+++ b/Template.Web/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "JwtConfig": {
+    "JwtSecret" : "ijurkbdlhmklqacwqzdxmkkhvqowlyqa",
+    "JwtIssuer": "https://localhost",
+    "JwtAudience": "https://localhost",
+    "JwtExpiryInDays": 7
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
